--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>MOHAMED JAMALUDEEN - Healthcare Data Analyst</title>
+        <title>Mohamed Jamaludeen Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Certifications">Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -46,8 +47,26 @@
                         Ramanathapuraam · Tamil Nadu · India ·
                         <a href="mailto:mohamedjamaludeen117@gmail.com">mohamedjamaludeen117@gmail.com</a>
                     </div>
+                    <!-- HTML: Add this in your header section -->
+<div class="mb-4">
+  <h4 class="text-muted mb-0 animated-role">Bioinformatician&nbsp;|&nbsp;Healthcare Data Analyst</h4>
+</div>
                     <p class="lead mb-5">Aspiring Healthcare Data Analyst with a strong foundation in SQL, Excel, Tableau, Power BI, SAS, and healthcare analytics. Passionate about turning raw clinical data into meaningful insights.</p>
                     <div class="social-icons">
+                        <p class="mb-3">
+                    <i class="far fa-check-circle text-primary me-3"></i>Hands-on with Bioinformatics tools
+                </p>
+                <p class="mb-3">
+                    <i class="far fa-check-circle text-primary me-3"></i>Strong skills in Tableau, Power BI, SQL, Excel, SAS & Python
+                </p>
+                <p class="mb-3">
+                    <i class="far fa-check-circle text-primary me-3"></i>Dedicated to making sense of healthcare data
+                </p>
+
+                <a class="btn btn-primary py-3 px-5 mt-3"
+                   href="https://drive.google.com/file/d/17PLfQAiZvC7ZwkBNqKWoX64TFQKpAPJN/view?usp=sharing"
+                   target="_blank">📄 View My Resume</a>
+            </div>
                         <a class="social-icon" href="www.linkedin.com/in/mohamed-jamaludeen117"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mohd-jamal-17"><i class="fab fa-github"></i></a>
                     </div>
@@ -139,7 +158,7 @@ Cardiovascular Disease </p>
             </section>
             <hr class="m-0" />
             <!-- Certifications-->
-            <section class="resume-section" id="certifications">
+            <section class="resume-section" id="Certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
@@ -176,6 +195,87 @@ claim processing workflows.
                 </div>
             </section>
         </div>
+    <!-- Contact Start -->
+<div class="container-xxl pb-5" id="contact">
+    <div class="container py-5">
+        <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-lg-6">
+                <h1 class="display-5 mb-0">Contact</h1>
+            </div>
+            <div class="col-lg-6 text-lg-end">
+                <a class="btn btn-primary py-3 px-5" href="mailto: mohamedjamaludeen117@gmail.com">Say Hello</a>
+            </div>
+        </div>
+
+        <div class="row g-5">
+
+            <!-- Contact Info -->
+            <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <p class="mb-2">My location:</p>
+                <h3 class="fw-bold">Ramanathapuram, Tamil Nadu, India</h3>
+                <hr class="w-100">
+
+                <p class="mb-2">Call me:</p>
+                <h3 class="fw-bold">+91 63843 60126</h3> 
+                <hr class="w-100">
+
+                <p class="mb-2">Mail me:</p>
+                <h3 class="fw-bold">mohamed
+                jamaludeen117@gmail.com</h3>
+                <hr class="w-30">
+
+                <p class="mb-2">Connect with me:</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square btn-primary me-2" href="http://www.linkedin.com/in/mohamed-jamaludeen117/ " target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-square btn-dark me-2" href="https://github.com/mohd-jamal-17" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-square btn-danger me-2" href="mailto:mohamedjamaludeen117@gmail.com"><i class="fa fa-envelope"></i></a>
+                </div>
+            </div>
+
+            <!-- Contact Form (Optional / Inactive) -->
+            <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <p class="mb-4">
+                     <p class="mb-4">
+    I'm actively seeking opportunities in Healthcare data Analyst. Reach out for job roles, collaborations, or networking.</p>
+
+</p>
+                </p>
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                <label for="name">Mohamed jamaludeen</label>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="form-floating">
+                                <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                <label for="email">mohamedjamaludeen117@gmail.com</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                <label for="subject">Subject</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                <label for="message">Message</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Contact End -->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
