--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Clinical Laboratory Training</h3>
-                            <div class="subheading mb-3">AASI Multi Speciality Hospital</div>
+                            <div class="subheading mb-3">AASI Multi Speciality Hospital, Ramanathapuram</div>
                             <p>Participated in diagnostic data entry, patient record digitization, and lab documentation processes. 
 Ensured accuracy in clinical data collection and reporting. Gained practical exposure to structured data workflows in a hospital environment.</p>
                         </div>
@@ -114,7 +114,7 @@ Cardiovascular Disease </p>
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Alagapp University, Karaikudi.</h3>
+                            <h3 class="mb-0">Alagappa University, Karaikudi.</h3>
                             <div class="subheading mb-3">Master of Science</div>
                             <div>Bioinformatics</div>
                             <p>CGPA: 7.02</p>
@@ -123,7 +123,7 @@ Cardiovascular Disease </p>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Syed Hameedha Arts and Science  College, Kilakarai.</h3>
+                            <h3 class="mb-0">Syed Hameedha Arts and Science College, Kilakarai.</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Microbiology</div>
                             <p>Percentage: 78%</p>
