--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="row g-3 mb-4">
                     <div class="col-sm-6">
-                        <img class="img-fluid rounded" src="img/protein.jpg" alt="Saranya Profile">
+                        <img class="img-fluid rounded" src="img/protein.jpg" alt="Mohamed Jamaludeen Profile">
                     </div>
                     <div class="col-sm-6">
                         <img class="img-fluid rounded" src="img/bioinfo.jpg" alt="Bioinformatics Image">
