--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
                     <h2 class="text-primary fw-bold mb-0"></h2>
                 </div>
                 <p class="mb-4">
-                    Academic and self-driven projects in bioinformatics, healthcare data dashboards, and AI-based chatbot tools.
+                    Academic and self-driven projects in bioinformatics and healthcare data dashboards.
                 </p>
                 <div class="d-flex align-items-center mb-3">
                     <h5 class="border-end pe-3 me-3 mb-0">Certifications</h5>
                     <h2 class="text-primary fw-bold mb-0"></h2>
                 </div>
                 <p class="mb-0">
-                    Certified in Python, Tableau, Power BI, SQL, Clinical Trials, AI/ML, and more — always upskilling.
+                    Certified in Python, Tableau, Power BI, SQL, Clinical Trials and more — always upskilling.
                 </p>
             </div>
         </div>
