--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
     <!-- CV Button BELOW -->
-    <a href="https://drive.google.com/file/d/1ARWVk7Ivnb8r7V5vtDpnM8u6miKdeDIJ/view?usp=sharing"
+    <a href="https://drive.google.com/file/d/1etWUZcxPQZaYoH4LkNX3UmKpGXEL9jLI/view?usp=sharing"
        target="_blank"
        class="btn btn-primary py-3 px-4 mb-4">📄 Download CV</a>
 
@@ -186,7 +186,7 @@
                 </p>
 
                 <a class="btn btn-primary py-3 px-5 mt-3"
-                   href="https://drive.google.com/file/d/1ARWVk7Ivnb8r7V5vtDpnM8u6miKdeDIJ/view?usp=sharing"
+                   href="https://drive.google.com/file/d/1etWUZcxPQZaYoH4LkNX3UmKpGXEL9jLI/view?usp=sharing"
                    target="_blank">📄 View My Resume</a>
             </div>
 
@@ -360,7 +360,7 @@
                     <li class="mx-3 active" data-filter="*">All Projects</li>
                     <li class="mx-3" data-filter=".academic">Academic</li>
                     <li class="mx-3" data-filter=".internship">Internship</li>
-                    <li class="mx-3" data-filter=".dashboard">Dashboards</li>
+                    <li class="mx-3" data-filter=".projects">Projects</li>
                 </ul>
             </div>
         </div>
@@ -398,10 +398,10 @@ compounds for cardiovascular disease, supporting pharmaceutical research objecti
                 </div>
             </div>
 
-            <!-- Dashboard Project 1 -->
-            <div class="col-lg-4 col-md-6 portfolio-item dashboard">
+            <!-- Project 1 -->
+            <div class="col-lg-4 col-md-6 portfolio-item projects">
                 <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="img/project-3.jpg" alt="Dashboard Project 1">
+                    <img class="img-fluid" src="img/project-3.jpg" alt="Project 1">
                     <div class="portfolio-btn">
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-3.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="#"><i class="fa fa-link"></i></a>
@@ -416,10 +416,10 @@ charts for gender distribution, outcome by age group, and AE severity.
                 </div>
             </div>
 
-            <!-- Dashboard Project 2 -->
-            <div class="col-lg-4 col-md-6 portfolio-item dashboard">
+            <!-- Project 2 -->
+            <div class="col-lg-4 col-md-6 portfolio-item projects">
                 <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="img/project-4.jpg" alt="Dashboard Project 2">
+                    <img class="img-fluid" src="img/project-4.jpg" alt="Project 2">
                     <div class="portfolio-btn">
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="#"><i class="fa fa-link"></i></a>
@@ -433,7 +433,40 @@ charts for gender distribution, outcome by age group, and AE severity.
  Tools Used: Python (Colab), Power BI</p>
                 </div>
             </div>
+
+            <!-- Project 3 -->
+             <div class="col-lg-4 col-md-6 portfolio-item projects">
+                <div class="portfolio-img rounded overflow-hidden">
+                    <img class="img-fluid" src="img/project-5.jpeg" alt="Project 3">
+                    <div class="portfolio-btn">
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="#"><i class="fa fa-link"></i></a>
+                    </div>
+                </div>
+                <h5 class="fw-semibold mt-3">Clinical Hospital Data Analysis</h5>
+                <div class="description-box d-none">
+                    <p class="mb-0"> Analyzed hospital performance metrics like mortality, readmission, and safety scores using real-world  
+clinical data. 
+ Cleaned data in Excel, transformed using SAS, queried via SQL, and visualized KPIs through interactive 
+Tableau dashboards. 
+ Tools Used: SQL, Excel, SAS, Tableau</p>
+    </div>
         </div>
+        <!-- Project 4 -->
+             <div class="col-lg-4 col-md-6 portfolio-item projects">
+                <div class="portfolio-img rounded overflow-hidden">
+                    <img class="img-fluid" src="img/project-6.png" alt="Project 4">
+                    <div class="portfolio-btn">
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-6.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="#"><i class="fa fa-link"></i></a>
+                    </div>
+                </div>
+                <h5 class="fw-semibold mt-3">Medical Coding Mini Project</h5>
+                <div class="description-box d-none">
+                    <p class="mb-0"> Demonstrate Practical Application of ICD-10, CPT and HCPCS Coding. 
+ Includes: Diagnosis + Procedure + Supply Coding Based on Real Clinical Cases. 
+ Tools Used: ICD-10, CPT HCPCS Medical Codebooks </p>
+                </div>
     </div>
 </div>
 <!-- Projects End -->
