--- a/index.html
+++ b/index.html
@@ -374,6 +374,8 @@
         <div class="row g-5 mb-5 align-items-center wow fadeInUp" data-wow-delay="0.1s">
             <div class="col-lg-6">
                 <h1 class="display-5 mb-0">My Projects</h1>
+                <p class="text-muted mt-2" style="font-size: 16px; font-style: italic;">
+                    Click on the project title to view more details.</p>
             </div>
             <div class="col-lg-6 text-lg-end">
                 <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
@@ -414,7 +416,7 @@ compounds for cardiovascular disease, supporting pharmaceutical research objecti
                 </div>
                 <h5 class="fw-semibold mt-3">Project: Drug Discovery for COVID-19 Using Molecular Docking</h5>
                 <div class="description-box">
-                    <p class="mb-0"><strong> molecular interactions to identify lead candidates for COVID-19 targets.</strong></p>
+                    <p class="mb-0"><strong> Molecular interactions to identify lead candidates for COVID-19 targets.</strong></p>
                 </div>
             </div>
 
