--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="row g-5 align-items-center flex-lg-row">
             <!-- Left: Profile Image -->
             <div class="col-lg-5 text-center wow fadeInLeft" data-wow-delay="0.2s">
-                <img class="img-fluid rounded-circle border border-4 border-primary shadow" src="img/profile-1.jpg" alt="Mohamed Jamaludeen Profile" style="max-width: 280px; background: #f1f1f1;">
+                <img class="img-fluid rounded-circle border border-4 border-primary shadow" src="img/Profile.jpg" alt="Mohamed Jamaludeen Profile" style="max-width: 280px; background: #f1f1f1;">
             </div>
 
             <!-- Right: Content -->
