--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
 .portfolio-item {
     margin-bottom: 30px;
 }
+/* ===== Advanced Look Additions ===== */
+:root{
+  --brand: #6366f1; /* indigo */
+  --brand2: #22d3ee; /* cyan */
+}
+.glass{backdrop-filter: blur(10px); background: rgba(255,255,255,0.85);}
+.grad-text{background: linear-gradient(90deg,var(--brand2),var(--brand)); -webkit-background-clip: text; background-clip: text; color: transparent;}
+.blur-orb{width:18rem;height:18rem;filter: blur(60px); opacity:.25;}
+.bg-gradient-primary{background: radial-gradient(closest-side at 50% 50%, #a78bfa, transparent);}
+.bg-gradient-secondary{background: radial-gradient(closest-side at 50% 50%, #22d3ee, transparent);}
+.ls-wide{letter-spacing:.2em;}
+.ringed{box-shadow:0 0 0 10px rgba(99,102,241,.15); border-radius:1.25rem;}
+.stat-card{background:rgba(255,255,255,.8); border:1px solid rgba(0,0,0,.06);}
+body{scroll-behavior:smooth;}
+/* project cards elevate */
+.portfolio-item{background:#fff; border:1px solid rgba(0,0,0,.06); border-radius:1rem; padding:12px; box-shadow:0 10px 30px rgba(2,6,23,0.08);}
+.portfolio-item .portfolio-img{border-radius:0.75rem; overflow:hidden;}
+.portfolio-item .portfolio-img img{transition: transform .4s ease;}
+.portfolio-item:hover .portfolio-img img{transform: scale(1.04);}
+#portfolio-flters li{padding:.5rem 1rem; border-radius:9999px; background:#f1f5f9; cursor:pointer;}
+#portfolio-flters li.active{background:linear-gradient(90deg,var(--brand2),var(--brand)); color:white;}
+/* section headings underline */
+.section-title-underline{position:relative; display:inline-block;}
+.section-title-underline::after{content:''; position:absolute; left:0; bottom:-8px; width:60%; height:4px; border-radius:9999px; background:linear-gradient(90deg,var(--brand2),var(--brand));}
 </style>
 </head>
 
@@ -82,8 +106,8 @@
 
         <!-- Center Brand for Desktop View -->
         <a href="index.html" class="navbar-brand py-3 px-4 mx-3 d-none d-lg-block" 
-           style="background: linear-gradient(90deg, #4facfe 0%, #00f2fe 100%); border-radius: 10px;">
-            <h1 class="text-white fw-bold m-0">Mohamed Jamaludeen Portfolio</h1>
+           style="background: linear-gradient(90deg, #ffffff 0%, #fafafa 100%); border-radius: 10px;">
+            <h1 class="text-black fw-bold m-0">Mohamed Jamaludeen </h1>
         </a>
 
         <!-- Right Nav Links -->
@@ -102,7 +126,9 @@
 
 
   <!-- Header Start -->
-<div class="container-fluid bg-light my-6 mt-0" id="home">
+<div class="container-fluid my-6 mt-0 position-relative overflow-hidden" id="home"
+    style="background: url('img/lifescience_bg.jpg') no-repeat center center/cover;">
+    <div style="position:absolute; inset:0; background:rgba(0,0,0,0.10); z-index:1;"></div>
     <div class="container">
         <div class="row g-5 align-items-center flex-lg-row">
             <!-- Left: Profile Image -->
@@ -347,17 +373,19 @@
                     <!-- Education -->
                     <div id="tab-2" class="tab-pane fade show p-0">
                         <div class="row gy-5 gx-4">
-                            <div class="col-sm-12">
+                            <div class="col-sm-12 portfolio-item">
                                 <h5>M.Sc. Bioinformatics</h5>
                                 <hr class="text-primary my-2">
                                 <p class="text-primary mb-1">July(2023) – May(2025)</p>
                                 <h6 class="mb-0">Alagappa University, Karaikudi</h6>
+                                <p class="text-primary mb-1">CGPA : 7.05</p>
                             </div>
-                            <div class="col-sm-12">
+                            <div class="col-sm-12 portfolio-item">
                                 <h5>B.Sc. Microbiology</h5>
                                 <hr class="text-primary my-2">
                                 <p class="text-primary mb-1">August(2020) – May(2023)</p>
                                 <h6 class="mb-0">Syed Hameedha Arts and Science College, Kilakarai.</h6>
+                                <p class="text-primary mb-1">Percentage : 78%</p>
                             </div>
                         </div>
                     </div>
@@ -375,7 +403,7 @@
             <div class="col-lg-6">
                 <h1 class="display-5 mb-0">My Projects</h1>
                 <p class="text-muted mt-2" style="font-size: 16px; font-style: italic;">
-                    Click on the project title to view more details.</p>
+                    </p>
             </div>
             <div class="col-lg-6 text-lg-end">
                 <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
@@ -398,6 +426,8 @@
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Project: Network Pharmacological Approach with Molecular Docking & Dynamics to Marine Compounds in Cardiovascular Disease.</i></h5>
+                <p class="mb-0"><strong> (Gene-target-pathway mapping and docking simulations to explore therapeutic potential of marine 
+compounds for cardiovascular disease, supporting pharmaceutical research objectives)</strong> 
                 <div class="description-box">
                     <p class="mb-0"><strong> Gene-target-pathway mapping and docking simulations to explore therapeutic potential of marine 
 compounds for cardiovascular disease, supporting pharmaceutical research objectives.</strong> 
@@ -415,6 +445,7 @@ compounds for cardiovascular disease, supporting pharmaceutical research objecti
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Project: Drug Discovery for COVID-19 Using Molecular Docking</h5>
+                <p class="mb-0"><strong> (Molecular interactions to identify lead candidates for COVID-19 targets)</strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong> Molecular interactions to identify lead candidates for COVID-19 targets.</strong></p>
                 </div>
@@ -430,6 +461,10 @@ compounds for cardiovascular disease, supporting pharmaceutical research objecti
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3"> Clinical Trial Data Analysis using Excel </h5>
+                 <p class="mb-0"><strong>1) Cleaned and analyzed a dataset of 20 patients to evaluate treatment outcomes and adverse events. 
+2)  Used Pivot Tables to summarize patient responses, treatment results, and AE frequency.  3) Created Excel 
+charts for gender distribution, outcome by age group, and AE severity. 
+4)  Tools Used: Microsoft Excel (Filters, Pivot Tables, Charts). </strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Cleaned and analyzed a dataset of 20 patients to evaluate treatment outcomes and adverse events. 
 2)  Used Pivot Tables to summarize patient responses, treatment results, and AE frequency.  3) Created Excel 
@@ -448,6 +483,10 @@ charts for gender distribution, outcome by age group, and AE severity.
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Healthcare Data Analysis using Python & Power BI</h5>
+                <p class="mb-0"><strong>1) Cleaned hospital discharge data using Python (Pandas, NumPy) in Google Colab. 
+2) Handled missing values, standardized records, and structured the dataset.  
+3) Built Power BI dashboards with slicers, KPIs, and visual charts for readmission patterns. 
+4) Tools Used: Python (Colab), Power BI</strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Cleaned hospital discharge data using Python (Pandas, NumPy) in Google Colab. 
 2) Handled missing values, standardized records, and structured the dataset.  
@@ -466,6 +505,11 @@ charts for gender distribution, outcome by age group, and AE severity.
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Clinical Hospital Data Analysis</h5>
+                <p class="mb-0"><strong>1) Analyzed hospital performance metrics like mortality, readmission, and safety scores using real-world  
+clinical data. 
+2) Cleaned data in Excel, transformed using SAS, queried via SQL, and visualized KPIs through interactive 
+Tableau dashboards. 
+3) Tools Used: SQL, Excel, SAS, Tableau</strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Analyzed hospital performance metrics like mortality, readmission, and safety scores using real-world  
 clinical data. 
@@ -484,6 +528,9 @@ Tableau dashboards.
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Medical Coding Mini Project</h5>
+                <p class="mb-0"><strong>1) Demonstrate Practical Application of ICD-10, CPT and HCPCS Coding. 
+2) Includes: Diagnosis + Procedure + Supply Coding Based on Real Clinical Cases. 
+3) Tools Used: ICD-10, CPT HCPCS Medical Codebooks </strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Demonstrate Practical Application of ICD-10, CPT and HCPCS Coding. 
 2) Includes: Diagnosis + Procedure + Supply Coding Based on Real Clinical Cases. 
