--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@ body{scroll-behavior:smooth;}
 
   <!-- Header Start -->
 <div class="container-fluid my-6 mt-0 position-relative overflow-hidden" id="home"
-    style="background: url('img/lifescience_bg.jpg') no-repeat center center/cover;">
-    <div style="position:absolute; inset:0; background:rgba(0,0,0,0.10); z-index:1;"></div>
+></div>
     <div class="container">
         <div class="row g-5 align-items-center flex-lg-row">
             <!-- Left: Profile Image -->
@@ -373,19 +372,19 @@ body{scroll-behavior:smooth;}
                     <!-- Education -->
                     <div id="tab-2" class="tab-pane fade show p-0">
                         <div class="row gy-5 gx-4">
-                            <div class="col-sm-12 portfolio-item">
+                            <div class="col-sm-12">
                                 <h5>M.Sc. Bioinformatics</h5>
                                 <hr class="text-primary my-2">
                                 <p class="text-primary mb-1">July(2023) – May(2025)</p>
                                 <h6 class="mb-0">Alagappa University, Karaikudi</h6>
-                                <p class="text-primary mb-1">CGPA : 7.05</p>
+                                <p class="mb-0">CGPA : 7.05</p>
                             </div>
-                            <div class="col-sm-12 portfolio-item">
+                            <div class="col-sm-12">
                                 <h5>B.Sc. Microbiology</h5>
                                 <hr class="text-primary my-2">
                                 <p class="text-primary mb-1">August(2020) – May(2023)</p>
                                 <h6 class="mb-0">Syed Hameedha Arts and Science College, Kilakarai.</h6>
-                                <p class="text-primary mb-1">Percentage : 78%</p>
+                                <p class="mb-0">Percentage : 78%</p>
                             </div>
                         </div>
                     </div>
@@ -403,7 +402,7 @@ body{scroll-behavior:smooth;}
             <div class="col-lg-6">
                 <h1 class="display-5 mb-0">My Projects</h1>
                 <p class="text-muted mt-2" style="font-size: 16px; font-style: italic;">
-                    </p>
+                    Click on the project title to view more details.</p>
             </div>
             <div class="col-lg-6 text-lg-end">
                 <ul class="list-inline mx-n3 mb-0" id="portfolio-flters">
@@ -425,9 +424,7 @@ body{scroll-behavior:smooth;}
                         <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="#"><i class="fa fa-link"></i></a>
                     </div>
                 </div>
-                <h5 class="fw-semibold mt-3">Project: Network Pharmacological Approach with Molecular Docking & Dynamics to Marine Compounds in Cardiovascular Disease.</i></h5>
-                <p class="mb-0"><strong> (Gene-target-pathway mapping and docking simulations to explore therapeutic potential of marine 
-compounds for cardiovascular disease, supporting pharmaceutical research objectives)</strong> 
+                <h5 class="fw-semibold mt-3">Project: Network Pharmacological Approach with Molecular Docking & Dynamics to Marine Compounds in Cardiovascular Disease.</i></h5> 
                 <div class="description-box">
                     <p class="mb-0"><strong> Gene-target-pathway mapping and docking simulations to explore therapeutic potential of marine 
 compounds for cardiovascular disease, supporting pharmaceutical research objectives.</strong> 
@@ -445,7 +442,6 @@ compounds for cardiovascular disease, supporting pharmaceutical research objecti
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Project: Drug Discovery for COVID-19 Using Molecular Docking</h5>
-                <p class="mb-0"><strong> (Molecular interactions to identify lead candidates for COVID-19 targets)</strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong> Molecular interactions to identify lead candidates for COVID-19 targets.</strong></p>
                 </div>
@@ -461,10 +457,6 @@ compounds for cardiovascular disease, supporting pharmaceutical research objecti
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3"> Clinical Trial Data Analysis using Excel </h5>
-                 <p class="mb-0"><strong>1) Cleaned and analyzed a dataset of 20 patients to evaluate treatment outcomes and adverse events. 
-2)  Used Pivot Tables to summarize patient responses, treatment results, and AE frequency.  3) Created Excel 
-charts for gender distribution, outcome by age group, and AE severity. 
-4)  Tools Used: Microsoft Excel (Filters, Pivot Tables, Charts). </strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Cleaned and analyzed a dataset of 20 patients to evaluate treatment outcomes and adverse events. 
 2)  Used Pivot Tables to summarize patient responses, treatment results, and AE frequency.  3) Created Excel 
@@ -483,10 +475,6 @@ charts for gender distribution, outcome by age group, and AE severity.
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Healthcare Data Analysis using Python & Power BI</h5>
-                <p class="mb-0"><strong>1) Cleaned hospital discharge data using Python (Pandas, NumPy) in Google Colab. 
-2) Handled missing values, standardized records, and structured the dataset.  
-3) Built Power BI dashboards with slicers, KPIs, and visual charts for readmission patterns. 
-4) Tools Used: Python (Colab), Power BI</strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Cleaned hospital discharge data using Python (Pandas, NumPy) in Google Colab. 
 2) Handled missing values, standardized records, and structured the dataset.  
@@ -505,11 +493,6 @@ charts for gender distribution, outcome by age group, and AE severity.
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Clinical Hospital Data Analysis</h5>
-                <p class="mb-0"><strong>1) Analyzed hospital performance metrics like mortality, readmission, and safety scores using real-world  
-clinical data. 
-2) Cleaned data in Excel, transformed using SAS, queried via SQL, and visualized KPIs through interactive 
-Tableau dashboards. 
-3) Tools Used: SQL, Excel, SAS, Tableau</strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Analyzed hospital performance metrics like mortality, readmission, and safety scores using real-world  
 clinical data. 
@@ -528,9 +511,6 @@ Tableau dashboards.
                     </div>
                 </div>
                 <h5 class="fw-semibold mt-3">Medical Coding Mini Project</h5>
-                <p class="mb-0"><strong>1) Demonstrate Practical Application of ICD-10, CPT and HCPCS Coding. 
-2) Includes: Diagnosis + Procedure + Supply Coding Based on Real Clinical Cases. 
-3) Tools Used: ICD-10, CPT HCPCS Medical Codebooks </strong></p>
                 <div class="description-box">
                     <p class="mb-0"><strong>1) Demonstrate Practical Application of ICD-10, CPT and HCPCS Coding. 
 2) Includes: Diagnosis + Procedure + Supply Coding Based on Real Clinical Cases. 
