--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@ body{scroll-behavior:smooth;}
 /* section headings underline */
 .section-title-underline{position:relative; display:inline-block;}
 .section-title-underline::after{content:''; position:absolute; left:0; bottom:-8px; width:60%; height:4px; border-radius:9999px; background:linear-gradient(90deg,var(--brand2),var(--brand));}
+body {
+  background-color: #ffffff;
+  background-image: radial-gradient(circle, rgba(59,130,246,0.1) 6px, transparent 2px),
+                    radial-gradient(circle, rgba(16,185,129,0.1) 6px, transparent 2px);
+  background-size: 60px 60px;
+  background-position: 0 0, 30px 30px;
+}
 </style>
 </head>
 
@@ -216,15 +223,16 @@ body{scroll-behavior:smooth;}
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                 <h2 class="mb-4">About Me</h2>
                 <p class="mb-4">
-                    I’m Mohamed Jamaludeen, an M.Sc. Bioinformatics graduate with a strong passion for healthcare data analysis and computational biology.
-                    I specialize in translating complex clinical and biological data into actionable insights using Power BI, SQL, Python, and bioinformatics tools.
+                    I’m Mohamed Jamaludeen, an M.Sc. Bioinformatics graduate with a strong interest in the healthcare and pharmaceutical domains.
+I have worked on academic projects involving clinical data, research datasets, and data management, and I enjoy transforming complex information into meaningful insights that support decision-making.
+My skill set includes SQL, Python, Power BI, and bioinformatics tools, which I aim to apply in healthcare analytics, clinical data coordination, and pharmaceutical research.
                 </p>
 
                 <p class="mb-3">
                     <i class="far fa-check-circle text-primary me-3"></i>Hands-on with Bioinformatics tools
                 </p>
                 <p class="mb-3">
-                    <i class="far fa-check-circle text-primary me-3"></i>Strong skills in Tableau, Power BI, SQL, Excel & Python
+                    <i class="far fa-check-circle text-primary me-3"></i>Strong knowledge of Life Sciences and clinical data, supported by technical skills in Tableau, Power BI, SQL, Excel, and Python.
                 </p>
                 <p class="mb-3">
                     <i class="far fa-check-circle text-primary me-3"></i>Dedicated to making sense of healthcare data
@@ -271,7 +279,7 @@ body{scroll-behavior:smooth;}
             <!-- Left Side: Skills -->
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                 <h1 class="display-5 mb-5">Skills & Experience</h1>
-                <p class="mb-4">I specialize in <strong>Data Analytics, Clinical Data Management (CDM), Pharmacovigilance / Drug Safety, Bioinformatics / Computational Biology</strong></p>
+                <p class="mb-4">I specialize in <strong>Data Analytics, Clinical Data Management (CDM), Pharmacovigilance / Drug Safety, Bioinformatics / Computational Biology, Human Anatomy and Physiology, Basic Medical Coding (ICD-10, CPC, HCPCS)</strong></p>
 
                 <h3 class="mb-4">Technical Skills</h3>
                 <div class="row align-items-center">
@@ -592,7 +600,7 @@ claim processing workflows..</li>
             <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <p class="mb-4">
                      <p class="mb-4">
-    I'm actively seeking opportunities in Healthcare data Analyst. Reach out for job roles, collaborations, or networking.</p>
+    I'm actively seeking opportunities in Healthcare and Pharmaceutical Domain. Reach out for job roles, collaborations, or networking.</p>
 
 </p>
                 </p>
